samples/_failures_safe/1761376866_b99b27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_415b9384.c: In function ‘print_token’:
./samples/SAFE/__tmp_415b9384.c:164:12: error: missing terminating " character
  164 |     printf("Line %d, Column %d: %
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_415b9384.c:164:5: error: expected expression at end of input
  164 |     printf("Line %d, Column %d: %
      |     ^~~~~~
./samples/SAFE/__tmp_415b9384.c:164:5: error: expected declaration or statement at end of input
